objects/Context_Free_Grammar_Rule__c.object
<CustomObject>
    <fields>
        <fullName>LHS__c</fullName>
        <label>LHS</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Rule</label>
        <referenceTo>Context_Free_Grammar_Rule__c</referenceTo>
        <relationshipLabel>Child Rules</relationshipLabel>
        <relationshipName>Context_Free_Grammar_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pushdown_Automata_Configuration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pushdown Automata Configuration</label>
        <referenceTo>Pushdown_Automata_Configuration__c</referenceTo>
        <relationshipLabel>Context Free Grammar Rules</relationshipLabel>
        <relationshipName>Context_Free_Grammar_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RHS__c</fullName>
        <label>RHS</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Context Free Grammar Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CFGR-{0000}</displayFormat>
        <label>Context Free Grammar Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Context Free Grammar Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>